welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:7: error: identifier expected but '(' found.
		if (nums.(i) == lookingFor) occ = occ + 1; 
                         ^